--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "pandas>=2.3.3",
     "polars>=1.33.1",
     "pytest>=8.4.2",
+    "pytest-cov>=7.0.0",
     "requests>=2.32.5",
     "ruff>=0.13.3",
 ]
