--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,8 @@ click==8.3.0
     #   rich-toolkit
     #   typer
     #   uvicorn
+coverage==7.10.7
+    # via pytest-cov
 dnspython==2.8.0
     # via email-validator
 email-validator==2.3.0
@@ -67,7 +69,9 @@ packaging==25.0
 pandas==2.3.3
     # via data-gen (pyproject.toml)
 pluggy==1.6.0
-    # via pytest
+    # via
+    #   pytest
+    #   pytest-cov
 polars==1.34.0
     # via data-gen (pyproject.toml)
 polars-runtime-32==1.34.0
@@ -83,6 +87,10 @@ pygments==2.19.2
     #   pytest
     #   rich
 pytest==8.4.2
+    # via
+    #   data-gen (pyproject.toml)
+    #   pytest-cov
+pytest-cov==7.0.0
     # via data-gen (pyproject.toml)
 python-dateutil==2.9.0.post0
     # via pandas
