--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,4 +50,41 @@ jobs:
 
       - name: Run coverage
         run: |
-          uv run pytest --cov=app tests/ --cov-report=term-missing
+          uv run pytest --cov=app tests/ --cov-report=xml --cov-report=html
+
+      - name: Generate HTML coverage report
+        run: |
+          pytest --cov=app tests/ --cov-report=html
+
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v4
+        with:
+          name: html-coverage-report
+          path: htmlcov/
+
+      - name: Upload coverage to Codecov
+        uses: codecov/codecov-action@v4
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./coverage.xml
+
+  publish-coverage:
+    needs: build-test
+    runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/main'
+
+    steps:
+      - name: Checkout repository
+        uses: actions/checkout@v3
+
+      - name: Download HTML coverage report
+        uses: actions/download-artifact@v4
+        with:
+          name: html-coverage-report
+          path: htmlcov
+
+      - name: Deploy coverage report to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v4
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: htmlcov
