--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,8 +24,8 @@ jobs:
 
       - name: Install dependencies via uv
         run: |
-          uv install -r requirements.txt
-          uv install pytest pytest-cov httpx uvicorn ruff
+          uv pip install -r pyproject.toml
+          uv pip install pytest pytest-cov httpx uvicorn ruff
 
       - name: Install the project
         run: uv sync --locked --all-extras --dev
